@@ -45,17 +45,43 @@ double randomNumber()
         s_initialized = true;
     }
 #endif
-
+    
+    uint32_t part1;
+    uint32_t part2;
+    uint64_t fullRandom;
 #if COMPILER(MSVC) && defined(_CRT_RAND_S)
-    unsigned u;
-    rand_s(&u);
-
-    return static_cast<double>(u) / (static_cast<double>(UINT_MAX) + 1.0);
+    rand_s(&part1);
+    rand_s(&part2);
+    fullRandom = part1;
+    fullRandom <<= 32;
+    fullRandom |= part2;
 #elif PLATFORM(DARWIN)
-    return static_cast<double>(arc4random()) / (static_cast<double>(std::numeric_limits<uint32_t>::max()) + 1.0);
+    part1 = arc4random();
+    part2 = arc4random();
+    fullRandom = part1;
+    fullRandom <<= 32;
+    fullRandom |= part2;
+#elif PLATFORM(UNIX)
+    part1 = random() & (RAND_MAX - 1);
+    part2 = random() & (RAND_MAX - 1);
+    // random only provides 31 bits
+    fullRandom = part1;
+    fullRandom <<= 31;
+    fullRandom |= part2;
 #else
-    return static_cast<double>(rand()) / (static_cast<double>(RAND_MAX) + 1.0);
+    part1 = rand() & (RAND_MAX - 1);
+    part2 = rand() & (RAND_MAX - 1);
+    // rand only provides 31 bits, and the low order bits of that aren't very random
+    // so we take the high 26 bits of part 1, and the high 27 bits of part2.
+    part1 >>= 5; // drop the low 5 bits
+    part2 >>= 4; // drop the low 4 bits
+    fullRandom = part1;
+    fullRandom <<= 27;
+    fullRandom |= part2;
 #endif
+    // Mask off the low 53bits
+    fullRandom &= (1LL << 53) - 1;
+    return static_cast<double>(fullRandom)/static_cast<double>(1LL << 53);
 }
 
 }
